# LasosProject

./: CMakeLists.txt  main.cpp
internal/lasos/lang/: LasosLang.cpp  LasosLang.h
internal/lasos/lexer/: LasosLexer.cpp  LasosLexer.h
internal/lasos/token/: LasosToken.cpp  LasosToken.h
pkg/profile/: profile.h
pkg/utils/: Utils.cpp  Utils.h
